...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewResultado"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btnAceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        />
...
        android:layout_marginTop="16dp"
        android:entries="@array/opciones_sexo"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Edad"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/editTextEstatura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Estatura (cm)"
        app:layout_constraintTop_toBottomOf="@+id/editTextEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Peso (kg)"
        app:layout_constraintTop_toBottomOf="@+id/editTextEstatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aceptar"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
...
